--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,9 @@
 
 <body>
     
-    <header>
-        <!-- some website stuff here? -->
-    </header>
+    <nav>
+        
+    </nav>
 
     <h1>
         <!-- the wordApi plug in here-->
