unable to recall how buttons work

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/style.css" />
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
 
 </head>
 
@@ -24,11 +24,8 @@
 
 <body>
 
-<div class="container">    
-    <div class="row">
-        <div class="col-md-6">
-
-    <div class="row" id="loginButton">
+<div class="container" id="firstSet">    
+    <div id="loginButton">
         <div id="menuBall1" class="menuBall">
             <button id="button1">
             <a class="ball blueball">
@@ -40,7 +37,7 @@
         </div>
     </div>          
     
-    <div class="row" id="registerButton">
+    <div id="registerButton">
         <div id="menuBall2" class="menuBall">
            <button id="button2"> <a class="ball redball">
                 <div class="menuText">
@@ -54,7 +51,7 @@
         </div>
     </div>
 
-    <div class="row" id="forms">
+<div class="container" id="secondSet">
         <div class="form" id="inForm">
                 <div class="login-wrap">
                         <div class="login-html">
@@ -91,9 +88,10 @@
         </div>
     </div>
 
+<div class="container" id="thirdSet">
     <div class="form" id="upForm"></div>
+    </div>
 
-</div>
 
 <script src="JS\index.js"></script>
 
